Fix overlapping

--- a/src/app/header/Header.module.css
+++ b/src/app/header/Header.module.css
@@ -10,6 +10,7 @@ header {
   display: flex;
   align-items: center;
   margin-bottom: 10px;
+  z-index: 1;
 }
 
 header .logo {
